# dataset-writer-rs

./: .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  README.md
src/: csv.rs  ipc.rs  lib.rs  parquet.rs  parquet_.rs  partitioned.rs  zstd.rs
