[package]
name = "dataset-writer"
edition = "2021"
version = "1.1.0"
description = "Utilities to write CSV/Arrow/Parquet files concurrently"
rust-version = "1.72"
readme = "README.md"
homepage = "https://gitlab.softwareheritage.org/swh/devel/dataset-writer-rs"
repository = "https://gitlab.softwareheritage.org/swh/devel/dataset-writer-rs"
keywords = ["dataset", "csv", "arrow-ipc", "feather", "parquet"]
categories = ["database", "filesystem"]

license = "GPL-3.0-or-later"

[features]
default = ["csv"]
arrow = ["dep:arrow", "dep:arrow-schema", "dep:arrow-array"]
arrow-ipc = ["arrow", "arrow/ipc"]
parquet = ["arrow", "dep:parquet", "parquet/zstd"]
csv = ["dep:csv", "dep:zstd"]

[dependencies]
anyhow = "1.0.79" 
rayon =  "1.9.0"
thread_local = "1.1.7"

# Formats
arrow = { version = ">=52.0.0,<54.0.0", optional = true }
arrow-schema = { version = ">=52.0.0,<54.0.0", optional = true, features = ["serde"] }
arrow-array = { version = ">=52.0.0,<54.0.0", optional = true }
csv = { version = "1.3.0", optional = true }
parquet = { version = ">=52.0.0,<54.0.0", default-features = false, features = ["arrow"], optional = true }
zstd = { version = "0.12", optional = true }

[dev-dependencies]
tempfile = "3.12.0"

[package.metadata."docs.rs"]
all-features = true
